client/styles/material.scss
@import './constants.scss';
@import '~@angular/material/theming';

@include mat-core();
@include angular-material-theme($light-theme);

@media only screen and (max-width: $mat-mobile) {
  .mat-button,
  .mat-raised-button,
  .mat-card-content {
    font-size: 13px;
  }

  button.mat-button,
  button.mat-raised-button {
    line-height: 32px;
  }
}

.mat-donor {
  background-color: $donor-color;
  color: black;
}

.mat-receiver {
  background-color: $receiver-color;
  color: black;
}

.mat-volunteer {
  background-color: $volunteer-color;
  color: white;
}

.mat-icon {
  &.mat-donor {
    background-color: inherit;
    color: $donor-color;
  }

  &.mat-receiver {
    background-color: inherit;
    color: $receiver-color;
  }

  &.mat-volunteer {
    background-color: inherit;
    color: $volunteer-color;
  }
}

.mat-snack-bar-container {
  &.mat-alert-info {
    background-color: $alert-info-background;
    color: $alert-info-color;
  }
  
  &.mat-alert-success {
    background-color: $alert-success-background;
    color: $alert-success-color;
  }
  
  &.mat-alert-warn {
    background-color: $alert-warn-background;
    color: $alert-warn-color;
  }
  
  &.mat-alert-danger {
    background-color: $alert-danger-background;
    color: $alert-danger-color;
  }
}

.cdk-overlay-pane {

  @media only screen and (max-width: $sm) {
    max-width: 95vw !important;
  }

  &.full-screen {
    max-width: 100vw !important;
    width: 100vw;
    max-height: 100vh !important;
    height: 100vh;
  }

  &.full-screen-mobile {
    @media only screen and (max-width: $sm) {
      max-width: 100vw !important;
      width: 100vw;
      max-height: 100vh !important;
      height: 100vh;
    }
  }

  .mat-dialog-container {
    .mat-alert-info {
      background-color: $primary;
      color: $accent-darkest;
    }
    
    .mat-alert-success {
      background-color: $primary-lighter;
      color: black;
    }
    
    .mat-alert-warn {
      background-color: #dfa645;
      color: white;
    }
    
    .mat-alert-danger {
      background-color: $warn;
      color: white;
    }
  
    .mat-button {
      &.mat-alert-info {
        background-color: transparent;
        color: $primary-darker;
      }
      
      &.mat-alert-success {
        background-color: transparent;
        color: $primary;
      }
      
      &.mat-alert-warn {
        background-color: transparent;
        color: #dfa645;
      }
      
      &.mat-alert-danger {
        background-color: transparent;
        color: $warn;
      }
    }
  }

  &.no-pad-top .mat-dialog-container {
    padding-top: 0;
  }

  &.no-pad-bottom .mat-dialog-container {
    padding-bottom: 0;
  }
}

.mat-form-field {
  .mat-form-field-subscript-wrapper {
    margin-top: 0.15em;
  }
}

.no-pad.mat-button {
  padding: 0px;
}

.no-pad {
  &.mat-button {
    padding: 0px;
  }

  &.mat-form-field {
    .mat-form-field-wrapper {
      padding-bottom: 0px;
    }

    .mat-form-field-underline {
      bottom: 0px;
    }
  }
}

.mat-select {
  &.accent {
    .mat-select-value {
      color: $accent;
    }
  }
}

button {
  outline: none !important;
}

mat-card.mat-card {
  margin-bottom: 20px;

  & > food-web-edit-save-button {
    position: absolute;
    top: 3px;
    right: 5px;
  }

  &.selectable-card {
    &:hover {
      text-decoration: none;
      box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
    }
  }

  mat-card-header.mat-card-header {
    position: relative;
    
    .mat-card-header-text {
      margin-top: -6px;

      @media only screen and (max-width: $mat-mobile) {
        margin-top: -1px;
      }

      .mat-card-subtitle {
        &:not(:first-child) {
          margin-top: -14px;
          margin-bottom: 10px;
        }
      }
    }
  }

  .mat-card-title, .mat-card-content {
    position: relative;
  }

  mat-card-title.mat-card-title {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
    color: $accent-darkest;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 20px;
    font-weight: bold;

    @media only screen and (max-width: $sm) {
      font-size: 18px;
    }

    @media only screen and (max-width: $mat-mobile) {
      font-size: 16px;
    }

    .mat-toolbar:first-child {
      margin: -16px 0px 0px -16px;
      max-height: 50px;
      width: calc(100% + 32px);
      justify-content: center;
      border-radius: inherit;
    }
  }

  @media only screen and (max-width: $mat-mobile) {
    margin-bottom: 10px;
  }

  .mat-card-content + .mat-card-actions {
    margin-top: -8px;
  }
}

.mat-drawer-container {
  height: calc(100% - #{$header-height});

  @media only screen and (max-width: $sm) {
    height: auto;
  }

  .mat-drawer {
    width: $left-nav-width;
    min-height: 100%;
    box-shadow: 1px 0px 5px 1px rgba(0, 0, 0, 0.5);

    @media only screen and (max-width: $sm) {
      &.sticky {
        position: fixed;
        top: $sub-header-height-mobile;
      }
    }
  }

  .mat-drawer-content {
    background-color: $content-background;
    min-height: calc(100vh - #{$header-height});

    @media only screen and (max-width: $mat-mobile) {
      min-height: calc(100vh - #{$header-height-mobile});
    }
  }
}

.mat-dialog-container {
  position: relative;
  border-radius: inherit;

  form {
    border-radius: inherit;
  }

  .mat-toolbar:first-child {
    margin: -24px -24px 12px -24px;
    width: calc(100% + 48px);
    max-height: 60px;
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
  }
}

.mat-dialog-container {
  .close-button {
    position: absolute;
    top: 1px;
    right: 1px;
    width: 26px;
    height: 26px;
    line-height: 24px;
    font-size: 24px;
    outline: none;
  }
}

body .mat-snack-bar-container {
  margin: 8px;

  .close-button {
    position: absolute;
    top: 1px;
    right: 1px;
    width: 18px;
    height: 18px;
    line-height: 18px;
    font-size: 18px;
    outline: none;
  }
}

.timepicker {

  @media only screen and (max-height: 700px) {
    position: fixed !important;
    top: $header-height;

    .timepicker__header {
      padding: 10px 15px !important;
    }

    .timepicker__body {
      padding: 10px 5px !important;
    }

    .timepicker__actions {
      padding: 10px 15px !important;
    }
  }

  .timepicker__header, .clock-face__clock-hand, .clock-face__number > .active {
    background-color: $primary !important;
  }

  .timepicker__actions {
    div {
      ngx-material-timepicker-button button.timepicker-button {
        color: $primary;
      }

      &:first-child ngx-material-timepicker-button button.timepicker-button span {
        color: $warn;
        font-weight: 500;
      }
    }
  }

}

.mat-input-element.mat-autosize {
  overflow-y: hidden;
  min-height: 18px;
}

.mat-radio-list {
  .mat-list-item {
    &:hover {
      background-color: whitesmoke;
    }
  }

  .mat-radio-button {
    display: block;
    width: 100%;
    height: 100%;

    .mat-radio-label {
      width: 100%;
      height: 100%;

      .mat-radio-container,
      .mat-radio-label-content {
        vertical-align: middle;
      }
    }
  }
}

.mat-action-list {
  a {
    text-decoration: none;

    &:hover {
      text-decoration: none;
    }
  }
}

.mat-checkbox {
  .mat-checkbox-layout {
    white-space: normal;
  }
}

.mat-list {
  .mat-list-item, .mat-list-item.mat-2-line {
    &.auto-height {
      height: auto;
      box-sizing: border-box;

      .mat-list-item-content {
        padding-top: 10px;
        padding-bottom: 10px;
      }
    }
  }
}

/* Google Maps Widget */
@media only screen and (max-width: $mat-mobile) {
  .gmnoprint,
  .gm-fullscreen-control {
    margin: 0 !important;
  }

  .hide-map-controls {
    .gmnoprint,
    .gm-fullscreen-control {
      display: none !important;
    }
  }
}

